# informatics

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  README.rst  nt.ps1  posix.sh  pyproject.toml  setup.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  main.rst  references.rst
docs/source/_locale/zh_CN/LC_MESSAGES/: index.po  introduction.po
docs/source/_locale/zh_CN/LC_MESSAGES/interface/: api_ana.po  api_frame.po  api_io.po  api_medical.po  api_misc.po  api_tensor.po  api_visual.po
docs/source/_locale/zh_CN/LC_MESSAGES/supplement/: supp_a1.po  supp_a2.po  supp_a5.po  supp_c1.po  supp_c2.po  supp_m1.po
docs/source/_locale/zh_CN/LC_MESSAGES/tutorial/: tut_trans.po
docs/source/_static/: documentation_options.js  nature.css
docs/source/interface/: api_ana.rst  api_dicom.rst  api_frame.rst  api_instance.rst  api_io.rst  api_kernel.rst  api_learn.rst  api_main.rst  api_medical.rst  api_misc.rst  api_network.rst  api_tensor.rst  api_visual.rst
docs/source/locale/zh_CN/LC_MESSAGES/: index.po  introduction.po  references.po
docs/source/locale/zh_CN/LC_MESSAGES/interface/: api_ana.po  api_frame.po  api_instance.po  api_io.po  api_learn.po  api_main.po  api_medical.po  api_misc.po  api_network.po  api_tensor.po  api_visual.po
docs/source/locale/zh_CN/LC_MESSAGES/supplement/: supp_a1.po  supp_a2.po  supp_a3.po  supp_a4.po  supp_a5.po  supp_a6.po  supp_b1.po  supp_b2.po  supp_c1.po  supp_c2.po  supp_m1.po  supp_main.po
docs/source/locale/zh_CN/LC_MESSAGES/tutorial/: tut_aug.po  tut_dicom.po  tut_edge.po  tut_func.po  tut_inflow.po  tut_main.po  tut_online.po  tut_pipe.po  tut_trans.po
docs/source/supplement/: supp_a1.rst  supp_a2.rst  supp_a3.rst  supp_a4.rst  supp_a5.rst  supp_a6.rst  supp_b1.rst  supp_b2.rst  supp_c1.rst  supp_c2.rst  supp_m1.rst  supp_main.rst
docs/source/tutorial/: tut_aug.rst  tut_dicom.rst  tut_edge.rst  tut_func.rst  tut_inflow.rst  tut_main.rst  tut_online.rst  tut_pipe.rst  tut_trans.rst
test/: test_anomalies.py  test_bayes.py  test_libs.py  test_tensor_hypotest.py
test/exports/: anomalies.pyp  bayes.pyp
