[project]
name = 'informatics'
dynamic = ['version']
license = { file = "LICENSE" }
description = 'Framework of fast implementation data processing and operating pipelines'
readme = "README.rst"
authors = [
    { name="Chen Zhang", email="chen.zhang_06sept@foxmail.com" },
]
maintainers = [
    { name="Chen Zhang", email="chen.zhang_06sept@foxmail.com" },
]
keywords = [
    'mathematical statistics',
    'Bayesian inference',
    'artificial intellegence',
    'amonly detection',
    'scientific calculation',
    'scientific computation',
    'computer vision',
    'anomaly detection',
    'data processing',
    'data visualization',
    'pipeline framework',
]
requires-python = '>= 3.9'
dependencies = [
    'numpy',
    'scipy',
    'dill',
    'tensorly',
    'pandas',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Natural Language :: Chinese (Simplified)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Education',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
]


[project.optional-dependencies]
ins = ['pillow', 'requests']
vis = ['pyqtgraph', 'PyOpenGL']  # suggest backend: PySide6, PyOpenGL_accelerate
med = ['pydicom', 'SimpleITK']
net = ['torch']


[project.urls]
Homepage = 'https://github.com/CubicZebra/informatics'
Release = 'https://github.com/CubicZebra/informatics/releases'
Documentation = 'https://informatics.readthedocs.io/en/latest/index.html'
Issues = 'https://github.com/CubicZebra/informatics/issues'


[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'cython']


[tool.setuptools]
package-dir = {"" = "."}
license-files = []  # twine upload unsupport field: 'license-files'


[tool.setuptools.packages.find]
where = ["."]  # ["."] by default
include = ["info*"]
namespaces = false  # true by default


[tool.setuptools.dynamic]
version = { attr = 'info.__version__' }